--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@ethersproject/address": "^5.6.1",
     "@ethersproject/contracts": "^5.6.2",
     "@ethersproject/providers": "^5.6.8",
+    "@splinetool/react-spline": "^2.2.1",
+    "@splinetool/runtime": "^0.9.90",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/network-connector": "^6.2.9",
